fixes flickering issue

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -11,6 +11,13 @@
 }
 
 @media only screen and (min-width: 1024px) {
+    html {
+        background-color: #141414;
+    }
+    
+    body {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 1023px) {
@@ -24,9 +31,23 @@
 }
 
 @media only screen and (min-width: 1400px) {
+    html {
+        background-color: #141414;
+    }
+    
+    body {
+        display: none;
+    }
 }
 
 @media only screen and (min-width: 1500px) {
+    html {
+        background-color: #141414;
+    }
+    
+    body {
+        display: none;
+    }
 }
 
 .toc .toggleNav ul li.navListItemActive a {
@@ -107,10 +128,6 @@
 } 
 
 .collapsible .arrow path[d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"] {
-    fill: #999999
-}
-
-.toc .toggleNav .navGroup .navGroupSubcategoryTitle path[d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"] {
     fill: #999999
 }
 
